--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "lint": "eslint **/*.js",
-    "start": "webpack-dev-server --host $IP --port $PORT --open --mode development",
+    "start": "webpack-dev-server --open --mode development",
     "build": "webpack -p"
   },
   "repository": {
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/leovcunha/fcc-speedrun-react#readme",
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-preset-env": "^1.7.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.2.2"
@@ -28,7 +29,6 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
-    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
