--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest",
     "lint": "eslint **/*.js",
     "start": "webpack-dev-server --open --mode development",
+    "cloud9": "webpack-dev-server --host $IP --port $PORT --public $C9_HOSTNAME --open --mode development",
     "build": "webpack -p"
   },
   "repository": {
@@ -21,14 +22,15 @@
   "homepage": "https://github.com/leovcunha/fcc-speedrun-react#readme",
   "dependencies": {
     "axios": "^0.18.0",
-    "babel-preset-env": "^1.7.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
+    "babel-jest": "^22.4.3",
     "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
@@ -36,8 +38,10 @@
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jest": "^21.15.1",
     "eslint-plugin-react": "^7.8.1",
+    "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^22.4.3",
+    "react-test-renderer": "^16.3.2",
     "sass-loader": "^7.0.1",
     "webpack": "^4.8.2",
     "webpack-cli": "^2.1.3",
