--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^22.4.3",
+    "node-sass": "^4.9.0",
     "react-test-renderer": "^16.3.2",
     "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
     "webpack": "^4.8.2",
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4",
