--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint **/*.js",
     "start": "webpack-dev-server --open --mode development",
     "cloud9": "webpack-dev-server --host $IP --port $PORT --public $C9_HOSTNAME --open --mode development",
-    "build": "webpack -p"
+    "build": "webpack --mode production",
+    "deploy": "gh-pages -d /dist"
   },
   "repository": {
     "type": "git",
@@ -40,13 +41,17 @@
     "eslint-plugin-jest": "^21.15.1",
     "eslint-plugin-react": "^7.8.1",
     "file-loader": "^1.1.11",
+    "gh-pages": "^1.2.0",
+    "gh-pages-webpack-plugin": "^1.0.2",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^22.4.3",
+    "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.0",
     "react-test-renderer": "^16.3.2",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
+    "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.8.2",
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4",
