--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^22.4.3",
+    "marked": "^0.4.0",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.0",
     "react-test-renderer": "^16.3.2",
