--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "axios": "^0.18.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "marked": "^0.4.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -46,7 +47,6 @@
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^22.4.3",
-    "marked": "^0.4.0",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.0",
     "react-test-renderer": "^16.3.2",
